--- a/xxoo.toml
+++ b/xxoo.toml
@@ -207,7 +207,7 @@ strip_release = true
 [libplacebo]
 source = 'regex'
 url = 'https://github.com/haasn/libplacebo/tags'
-regex = 'v([\d\.]+)'
+regex = 'releases/tag/v([\d\.]+)"'
 
 [libpng]
 source = 'regex'
