--- a/xxoo.toml
+++ b/xxoo.toml
@@ -241,7 +241,7 @@ url = 'https://git.libssh.org/projects/libssh.git/'
 regex = 'libssh-([\d\.]+)\.tar.xz'
 
 [libudfread]
-source 'manual'
+source = 'manual'
 manual = '1.1.2'
 
 [libvorbis]
