--- a/xxoo.toml
+++ b/xxoo.toml
@@ -220,7 +220,7 @@ regex = 'soxr-([\d\.]+)-Source\.tar.xz'
 
 [libspeex]
 source = 'gitlab'
-gitlab = 'gitlab-org/xiph/speex'
+gitlab = 'xiph.org/xiph/speex'
 use_max_tag = true
 
 [libsrt]
