--- a/xxoo.toml
+++ b/xxoo.toml
@@ -269,6 +269,13 @@ regex = 'v([\d\.]+[-\w+]?)'
 from_pattern = '-'
 to_pattern = '_'
 
+[libwebp-2]
+source = 'regex'
+url = 'https://chromium.googlesource.com/webm/libwebp'
+regex = 'v([\d\.]+-\w+)'
+from_pattern = '-'
+to_pattern = '_'
+
 [libxml2]
 source = 'regex'
 url = 'https://gitlab.gnome.org/GNOME/libxml2/-/tags'
