--- a/xxoo.toml
+++ b/xxoo.toml
@@ -91,7 +91,7 @@ source = 'regex'
 url = 'https://github.com/freetype/freetype/tags'
 regex = 'releases/tag/VER-([\d-]+)'
 from_pattern = '-'
-to_pattern = '_'
+to_pattern = '.'
 
 [fribidi]
 source = 'regex'
