--- a/xxoo.toml
+++ b/xxoo.toml
@@ -262,8 +262,8 @@ to_pattern = '_'
 
 [libxml2]
 source = 'regex'
-url = 'https://gitlab.gnome.org/GNOME/libxml2/-/tags'
-regex = 'v([\d\.]+)"'
+url = 'https://github.com/GNOME/libxml2/tags'
+regex = 'releases/tag/v([\d\.]+)"'
 
 [libxvid]
 source = 'regex'
