--- a/xxoo.toml
+++ b/xxoo.toml
@@ -138,6 +138,11 @@ source = 'regex'
 url = 'https://github.com/cacalabs/libcaca/tags'
 regex = 'releases/tag/v([\d\.]+\w+)"'
 
+[libdovi]
+source = 'regex'
+url = 'https://github.com/quietvoid/dovi_tool/tags'
+regex = 'libdovi-([\d\.]+)"'
+
 [libdvdcss]
 source = 'archpkg'
 archpkg = 'libdvdcss'
