--- a/xxoo.toml
+++ b/xxoo.toml
@@ -364,8 +364,8 @@ use_latest_release = true
 
 [vulkan]
 source = 'regex'
-url = 'https://github.com/KhronosGroup/Vulkan-Headers/tags'
-regex = 'releases/tag/sdk-([\d\.]+)"'
+url = 'https://vulkan.lunarg.com/sdk/files.json'
+regex = 'VulkanSDK-([\d\.]+)-Installer'
 
 [yt-dlp]
 source = 'regex'
