--- a/xxoo.toml
+++ b/xxoo.toml
@@ -367,6 +367,10 @@ source = 'regex'
 url = 'https://vulkan.lunarg.com/sdk/files.json'
 regex = 'VulkanSDK-([\d\.]+)-Installer'
 
+[test]
+source = 'cmd'
+cmd = "curl https://vulkan.lunarg.com/sdk/latest/windows.json | grep -Eo '[0-9\.]+'"
+
 [yt-dlp]
 source = 'regex'
 url = 'https://github.com/yt-dlp/yt-dlp/tags'
