--- a/xxoo.toml
+++ b/xxoo.toml
@@ -368,8 +368,9 @@ url = 'https://vulkan.lunarg.com/sdk/files.json'
 regex = 'VulkanSDK-([\d\.]+)-Installer'
 
 [test]
-source = 'cmd'
-cmd = "curl https://vulkan.lunarg.com/sdk/latest/windows.json | grep -Eo '[\d\.]+'"
+source = 'regex'
+url = 'https://vulkan.lunarg.com/sdk/latest/windows.json'
+regex = '([\d\.]+)'
 
 [yt-dlp]
 source = 'regex'
