--- a/xxoo.toml
+++ b/xxoo.toml
@@ -51,8 +51,8 @@ regex = 'releases/tag/pkgconf-([\d\.]+)"'
 
 [LuaJIT]
 source = 'regex'
-url = 'https://luajit.org/download.html'
-regex = 'LuaJIT-([\w\.-]+)'
+url = 'https://github.com/LuaJIT/LuaJIT/tags'
+regex = 'releases/tag/v([\w\.-]+)'
 from_pattern = '-'
 to_pattern = '_'
 
