--- a/xxoo.toml
+++ b/xxoo.toml
@@ -9,6 +9,11 @@ source = 'regex'
 url = 'https://gcc.gnu.org'
 regex = '>GCC ([\d\.]+)<'
 
+[GCC1]
+source = 'regex'
+url = 'https://ftp.gnu.org/gnu/gcc/'
+regex = 'gcc-([\d\.]+)\/'
+
 [libiconv]
 source = 'regex'
 url = 'https://ftp.gnu.org/pub/gnu/libiconv/'
