--- a/xxoo.toml
+++ b/xxoo.toml
@@ -44,6 +44,11 @@ source = 'regex'
 url = 'https://ftp.gnu.org/pub/gnu/make/'
 regex = 'make-([\d\.]+)\.tar.gz'
 
+[cmake]
+source = 'regex'
+url = 'https://github.com/Kitware/CMake/tags'
+regex = 'releases/tag/v([\d\.]+)"'
+
 [pkgconf]
 source = 'regex'
 url = 'https://github.com/pkgconf/pkgconf/tags'
