--- a/xxoo.toml
+++ b/xxoo.toml
@@ -44,6 +44,16 @@ source = 'regex'
 url = 'https://ftp.gnu.org/pub/gnu/make/'
 regex = 'make-([\d\.]+)\.tar.gz'
 
+[nasm]
+source = 'regex'
+url = 'https://github.com/netwide-assembler/nasm/tags'
+regex = 'releases/tag/nasm-([\d\.]+)"'
+
+[yasm]
+source = 'regex'
+url = 'https://github.com/yasm/yasm/tags'
+regex = 'releases/tag/v([\d\.]+)"'
+
 [cmake]
 source = 'regex'
 url = 'https://github.com/Kitware/CMake/tags'
