--- a/xxoo.toml
+++ b/xxoo.toml
@@ -275,6 +275,11 @@ source = 'regex'
 url = 'https://github.com/glennrp/libpng/tags'
 regex = 'releases/tag/v([\d\.]+)"'
 
+[libsamplerate]
+source = 'regex'
+url = 'https://github.com/libsndfile/libsamplerate/tags'
+regex = 'releases/tag/release-([\d\.]+)"'
+
 [libsdl2]
 source = 'regex'
 url = 'https://github.com/libsdl-org/SDL/tags'
