--- a/xxoo.toml
+++ b/xxoo.toml
@@ -200,6 +200,11 @@ source = 'archpkg'
 archpkg = 'lcms2'
 strip_release = true
 
+[libarchive]
+source = 'regex'
+url = 'https://github.com/libarchive/libarchive/tags'
+regex = 'releases/tag/v([\d\.]+)"'
+
 [libaribb24]
 source = 'regex'
 url = 'https://github.com/nkoriyama/aribb24/tags'
