--- a/xxoo.toml
+++ b/xxoo.toml
@@ -473,6 +473,11 @@ source = 'regex'
 url = 'https://vulkan.lunarg.com/sdk/latest/windows.json'
 regex = '([\d\.]+)'
 
+[vvdec]
+source = 'regex'
+url = 'https://github.com/fraunhoferhhi/vvdec/tags'
+regex = 'releases/tag/v([\d\.]+)"'
+
 [yt-dlp]
 source = 'regex'
 url = 'https://github.com/yt-dlp/yt-dlp/tags'
