--- a/xxoo.toml
+++ b/xxoo.toml
@@ -90,6 +90,11 @@ source = 'regex'
 url = 'https://gcc-mcf.lhmouse.com/'
 regex = 'mingw-w64-gcc-mcf_([\d]+_[\d\.]+_x64-ucrt_\w+)\.7z'
 
+[Mingw-w64]
+source = 'regex'
+url = 'https://gcc--mcf-lhmouse-com.translate.goog/?_x_tr_sl=auto&_x_tr_tl=en-US&_x_tr_hl=en-US&_x_tr_pto=wapp'
+regex = 'mingw-w64-gcc-mcf_([\d]+_[\d\.]+_x64-ucrt_\w+)\.7z'
+
 [nginx]
 source = 'regex'
 url = 'https://nginx.org/en/download.html'
