--- a/xxoo.toml
+++ b/xxoo.toml
@@ -96,9 +96,9 @@ url = 'https://nginx.org/en/download.html'
 regex = 'nginx-([\d\.]+)'
 
 [openssl]
-source = 'regex'
-url = 'https://github.com/openssl/openssl/tags'
-regex = 'releases/tag/openssl-([\d\.]+)"'
+source = 'archpkg'
+archpkg = 'openssl'
+strip_release = true
 
 [Python]
 source = 'regex'
