--- a/.github/workflows/nvchecker.yml
+++ b/.github/workflows/nvchecker.yml
@@ -19,6 +19,7 @@ jobs:
         
     - name: Check Latest Version
       run: |
+        sudo apt update
         sudo apt install python3-pycurl python3-tornado
         pip3 install in_place nvchecker
         nvchecker -c xxoo.toml -k keyfile.toml
